Fix Mood button shifting layout on click, add title to buttons

--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -33,26 +33,39 @@
   margin-right: 1rem;
 }
 
+.default-mood:hover {
+  color: var(--black);
+  box-shadow: inset 0 -1px 0  var(--black);
+}
+.curious-mood:hover {
+  color: var(--curious);
+  box-shadow: inset 0 -1px 0  var(--curious);
+}
+.openminded-mood:hover {
+  color: var(--openminded);
+  box-shadow: inset 0 -1px 0 var(--openminded)
+}
+.enthusiastic-mood:hover {
+  color: var(--enthusiastic);
+  box-shadow: inset 0 -1px 0  var(--enthusiastic)
+}
+
 .default-active{
   color: var(--black);
-  font-weight: bold;
-  border-bottom: 2px solid var(--black);
-  content: 'Enthusiastic'
+  box-shadow: inset 0 -2px 0  var(--black) !important;
+
 }
 .curious-active{
   color: var(--curious);
-  font-weight: bold;
-  border-bottom: 2px solid var(--curious);
+  box-shadow: inset 0 -2px 0  var(--curious) !important;
 }
 .openminded-active{
   color: var(--openminded);
-  font-weight: bold;
-  border-bottom: 2px solid var(--openminded);
+  box-shadow: inset 0 -2px 0 var(--openminded) !important;
 }
 .enthusiastic-active{
   color: var(--enthusiastic);
-  font-weight: bold;
-  border-bottom: 2px solid var(--enthusiastic);
+  box-shadow: inset 0 -2px 0  var(--enthusiastic) !important;
 }
 
 /* Disable Link effect */
@@ -95,8 +108,4 @@ button {
 
 .header-title {
   width: fit-content;
-}
-
-.header-title:hover {
-  cursor: pointer;
 }
